[package]
name = "bookmarks"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["query"] }
axum-extra = { version = "0.7", features = ["form"] }
minijinja = { version = "1.0", features = ["loader"] }
minijinja-contrib = { version = "1.0", features = ["datetime", "timezone"] }
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.30", features = ["full"] }
